feat: hosting in azure